remove publish script

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
 		"prettier": "prettier --write .",
 		"patch": "npm run prettier && npm version patch",
 		"minor": "npm run prettier && npm version minor",
-		"major": "npm run prettier && npm version major",
-		"publish": "npm run publish"
+		"major": "npm run prettier && npm version major"
 	},
 	"peerDependencies": {
 		"react": "^16.9.0 || ^17.0.0 || ^18.0.0"
